--- a/GLM_analysis.ipynb
+++ b/GLM_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +12,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of the combined matrix for the first neuron of animal_1: (50, 4, 213)\n",
-      "Total number of animals in dictionary: 10\n",
-      "Number of neurons for animal_1: 5\n"
+      "data_dict['animal']['ShiftR'][0].shape (50, 213, 6)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 42\u001b[0m\n\u001b[0;32m     40\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m column \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(spatial_bin_matrix\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m]):\n\u001b[0;32m     41\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m column \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m---> 42\u001b[0m         spatial_bin_matrix\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m][bin_slices[\u001b[38;5;241m0\u001b[39m]] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     43\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m column \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m     44\u001b[0m         spatial_bin_matrix\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m][bin_slices[\u001b[38;5;241m1\u001b[39m]] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not subscriptable"
      ]
     }
    ],
@@ -40,22 +49,56 @@
     "\n",
     "reorganized_data = {}\n",
     "\n",
+    "print(f\"data_dict['animal']['ShiftR'][0].shape {data_dict['animal']['ShiftR'][0].shape}\")\n",
+    "\n",
+    "bin_slices = [\n",
+    "    slice(0, 10),  \n",
+    "    slice(10, 20),  \n",
+    "    slice(20, 30),  \n",
+    "    slice(30, 40),  \n",
+    "    slice(40, 50)   \n",
+    "]\n",
+    "\n",
     "for animal_idx in range(num_animals):\n",
     "    neuron_list = []\n",
     "    \n",
     "    num_neurons = data_dict['animal']['ShiftR'][animal_idx].shape[2]\n",
-    "    \n",
+    "   \n",
     "    for neuron_idx in range(1,num_neurons):\n",
     "        neuron_data = []\n",
     "        neuron_data.append(data_dict['animal']['ShiftLrate'][animal_idx])               # Lick rate\n",
     "        neuron_data.append(data_dict['animal']['ShiftV'][animal_idx])                   # Reward location (valve opening)\n",
     "        neuron_data.append(data_dict['animal']['ShiftRunning'][animal_idx])             # Running speed  \n",
+    "        neuron_data.append(data_dict['animal']['ShiftR'][animal_idx][:, :, neuron_idx]) # Neuron activity\n",
+    "        \n",
     "\n",
+    "        \n",
+    "        spatial_bin_matrix = np.zeros((50, 5))\n",
+    "        for column in range(spatial_bin_matrix.shape[1]):\n",
+    "            if column == 0:\n",
+    "                spatial_bin_matrix.shape[0][bin_slices[0]] == 1\n",
+    "            if column == 1:\n",
+    "                spatial_bin_matrix.shape[0][bin_slices[1]] == 1\n",
+    "            if column == 2:\n",
+    "                spatial_bin_matrix.shape[0][bin_slices[2]] == 1\n",
+    "            if column == 3:\n",
+    "                spatial_bin_matrix.shape[0][bin_slices[3]] == 1\n",
+    "            if column == 4:\n",
+    "                spatial_bin_matrix.shape[0][bin_slices[4]] == 1\n",
+    "                \n",
+    "                \n",
+    "        plt.plot()\n",
+    "        plt.imshow(spatial_bin_matrix, aspect-'auto')\n",
+    "        plt.colorbar()\n",
+    "        \n",
+    "\n",
+    "            \n",
+    "        \n",
     "        # TODO: Add 5 spatial features\n",
     "        # TODO: add combo of lick+valve\n",
     "\n",
     "        \n",
-    "        neuron_data.append(data_dict['animal']['ShiftR'][animal_idx][:, :, neuron_idx]) # Neuron activity\n",
+    "        \n",
     "        combined_matrix = np.stack(neuron_data, axis=1) \n",
     "        neuron_list.append(combined_matrix)\n",
     "\n",
@@ -68,9 +111,261 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 21,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data_dict['animal']['ShiftR'][0].shape (50, 213, 6)\n",
+      "licking_on_reward_expanded shape (50, 1, 213)\n",
+      "combined_matrix shape (50, 10, 213)\n",
+      "licking_on_reward_expanded shape (50, 1, 213)\n",
+      "combined_matrix shape (50, 10, 213)\n",
+      "licking_on_reward_expanded shape (50, 1, 213)\n",
+      "combined_matrix shape (50, 10, 213)\n",
+      "licking_on_reward_expanded shape (50, 1, 213)\n",
+      "combined_matrix shape (50, 10, 213)\n",
+      "licking_on_reward_expanded shape (50, 1, 213)\n",
+      "combined_matrix shape (50, 10, 213)\n",
+      "licking_on_reward_expanded shape (50, 1, 159)\n",
+      "combined_matrix shape (50, 10, 159)\n",
+      "licking_on_reward_expanded shape (50, 1, 159)\n",
+      "combined_matrix shape (50, 10, 159)\n",
+      "licking_on_reward_expanded shape (50, 1, 159)\n",
+      "combined_matrix shape (50, 10, 159)\n",
+      "licking_on_reward_expanded shape (50, 1, 159)\n",
+      "combined_matrix shape (50, 10, 159)\n",
+      "licking_on_reward_expanded shape (50, 1, 159)\n",
+      "combined_matrix shape (50, 10, 159)\n",
+      "licking_on_reward_expanded shape (50, 1, 159)\n",
+      "combined_matrix shape (50, 10, 159)\n",
+      "licking_on_reward_expanded shape (50, 1, 159)\n",
+      "combined_matrix shape (50, 10, 159)\n",
+      "licking_on_reward_expanded shape (50, 1, 159)\n",
+      "combined_matrix shape (50, 10, 159)\n",
+      "licking_on_reward_expanded shape (50, 1, 159)\n",
+      "combined_matrix shape (50, 10, 159)\n",
+      "licking_on_reward_expanded shape (50, 1, 159)\n",
+      "combined_matrix shape (50, 10, 159)\n",
+      "licking_on_reward_expanded shape (50, 1, 159)\n",
+      "combined_matrix shape (50, 10, 159)\n",
+      "licking_on_reward_expanded shape (50, 1, 159)\n",
+      "combined_matrix shape (50, 10, 159)\n",
+      "licking_on_reward_expanded shape (50, 1, 159)\n",
+      "combined_matrix shape (50, 10, 159)\n",
+      "licking_on_reward_expanded shape (50, 1, 159)\n",
+      "combined_matrix shape (50, 10, 159)\n",
+      "licking_on_reward_expanded shape (50, 1, 159)\n",
+      "combined_matrix shape (50, 10, 159)\n",
+      "licking_on_reward_expanded shape (50, 1, 83)\n",
+      "combined_matrix shape (50, 10, 83)\n",
+      "licking_on_reward_expanded shape (50, 1, 83)\n",
+      "combined_matrix shape (50, 10, 83)\n",
+      "licking_on_reward_expanded shape (50, 1, 83)\n",
+      "combined_matrix shape (50, 10, 83)\n",
+      "licking_on_reward_expanded shape (50, 1, 83)\n",
+      "combined_matrix shape (50, 10, 83)\n",
+      "licking_on_reward_expanded shape (50, 1, 83)\n",
+      "combined_matrix shape (50, 10, 83)\n",
+      "licking_on_reward_expanded shape (50, 1, 83)\n",
+      "combined_matrix shape (50, 10, 83)\n",
+      "licking_on_reward_expanded shape (50, 1, 152)\n",
+      "combined_matrix shape (50, 10, 152)\n",
+      "licking_on_reward_expanded shape (50, 1, 152)\n",
+      "combined_matrix shape (50, 10, 152)\n",
+      "licking_on_reward_expanded shape (50, 1, 152)\n",
+      "combined_matrix shape (50, 10, 152)\n",
+      "licking_on_reward_expanded shape (50, 1, 152)\n",
+      "combined_matrix shape (50, 10, 152)\n",
+      "licking_on_reward_expanded shape (50, 1, 65)\n",
+      "combined_matrix shape (50, 10, 65)\n",
+      "licking_on_reward_expanded shape (50, 1, 65)\n",
+      "combined_matrix shape (50, 10, 65)\n",
+      "licking_on_reward_expanded shape (50, 1, 65)\n",
+      "combined_matrix shape (50, 10, 65)\n",
+      "licking_on_reward_expanded shape (50, 1, 65)\n",
+      "combined_matrix shape (50, 10, 65)\n",
+      "licking_on_reward_expanded shape (50, 1, 65)\n",
+      "combined_matrix shape (50, 10, 65)\n",
+      "licking_on_reward_expanded shape (50, 1, 65)\n",
+      "combined_matrix shape (50, 10, 65)\n",
+      "licking_on_reward_expanded shape (50, 1, 65)\n",
+      "combined_matrix shape (50, 10, 65)\n",
+      "licking_on_reward_expanded shape (50, 1, 65)\n",
+      "combined_matrix shape (50, 10, 65)\n",
+      "licking_on_reward_expanded shape (50, 1, 65)\n",
+      "combined_matrix shape (50, 10, 65)\n",
+      "licking_on_reward_expanded shape (50, 1, 65)\n",
+      "combined_matrix shape (50, 10, 65)\n",
+      "licking_on_reward_expanded shape (50, 1, 65)\n",
+      "combined_matrix shape (50, 10, 65)\n",
+      "licking_on_reward_expanded shape (50, 1, 65)\n",
+      "combined_matrix shape (50, 10, 65)\n",
+      "licking_on_reward_expanded shape (50, 1, 65)\n",
+      "combined_matrix shape (50, 10, 65)\n",
+      "licking_on_reward_expanded shape (50, 1, 165)\n",
+      "combined_matrix shape (50, 10, 165)\n",
+      "licking_on_reward_expanded shape (50, 1, 165)\n",
+      "combined_matrix shape (50, 10, 165)\n",
+      "licking_on_reward_expanded shape (50, 1, 165)\n",
+      "combined_matrix shape (50, 10, 165)\n",
+      "licking_on_reward_expanded shape (50, 1, 165)\n",
+      "combined_matrix shape (50, 10, 165)\n",
+      "licking_on_reward_expanded shape (50, 1, 165)\n",
+      "combined_matrix shape (50, 10, 165)\n",
+      "licking_on_reward_expanded shape (50, 1, 165)\n",
+      "combined_matrix shape (50, 10, 165)\n",
+      "licking_on_reward_expanded shape (50, 1, 165)\n",
+      "combined_matrix shape (50, 10, 165)\n",
+      "licking_on_reward_expanded shape (50, 1, 165)\n",
+      "combined_matrix shape (50, 10, 165)\n",
+      "licking_on_reward_expanded shape (50, 1, 165)\n",
+      "combined_matrix shape (50, 10, 165)\n",
+      "licking_on_reward_expanded shape (50, 1, 165)\n",
+      "combined_matrix shape (50, 10, 165)\n",
+      "licking_on_reward_expanded shape (50, 1, 165)\n",
+      "combined_matrix shape (50, 10, 165)\n",
+      "licking_on_reward_expanded shape (50, 1, 165)\n",
+      "combined_matrix shape (50, 10, 165)\n",
+      "licking_on_reward_expanded shape (50, 1, 165)\n",
+      "combined_matrix shape (50, 10, 165)\n",
+      "licking_on_reward_expanded shape (50, 1, 84)\n",
+      "combined_matrix shape (50, 10, 84)\n",
+      "licking_on_reward_expanded shape (50, 1, 84)\n",
+      "combined_matrix shape (50, 10, 84)\n",
+      "licking_on_reward_expanded shape (50, 1, 84)\n",
+      "combined_matrix shape (50, 10, 84)\n",
+      "licking_on_reward_expanded shape (50, 1, 179)\n",
+      "combined_matrix shape (50, 10, 179)\n",
+      "licking_on_reward_expanded shape (50, 1, 179)\n",
+      "combined_matrix shape (50, 10, 179)\n",
+      "licking_on_reward_expanded shape (50, 1, 179)\n",
+      "combined_matrix shape (50, 10, 179)\n",
+      "licking_on_reward_expanded shape (50, 1, 84)\n",
+      "combined_matrix shape (50, 10, 84)\n",
+      "licking_on_reward_expanded shape (50, 1, 84)\n",
+      "combined_matrix shape (50, 10, 84)\n",
+      "licking_on_reward_expanded shape (50, 1, 84)\n",
+      "combined_matrix shape (50, 10, 84)\n",
+      "licking_on_reward_expanded shape (50, 1, 150)\n",
+      "combined_matrix shape (50, 10, 150)\n",
+      "licking_on_reward_expanded shape (50, 1, 150)\n",
+      "combined_matrix shape (50, 10, 150)\n",
+      "licking_on_reward_expanded shape (50, 1, 150)\n",
+      "combined_matrix shape (50, 10, 150)\n",
+      "licking_on_reward_expanded shape (50, 1, 150)\n",
+      "combined_matrix shape (50, 10, 150)\n",
+      "licking_on_reward_expanded shape (50, 1, 150)\n",
+      "combined_matrix shape (50, 10, 150)\n",
+      "licking_on_reward_expanded shape (50, 1, 150)\n",
+      "combined_matrix shape (50, 10, 150)\n",
+      "licking_on_reward_expanded shape (50, 1, 150)\n",
+      "combined_matrix shape (50, 10, 150)\n",
+      "licking_on_reward_expanded shape (50, 1, 150)\n",
+      "combined_matrix shape (50, 10, 150)\n",
+      "licking_on_reward_expanded shape (50, 1, 150)\n",
+      "combined_matrix shape (50, 10, 150)\n",
+      "licking_on_reward_expanded shape (50, 1, 150)\n",
+      "combined_matrix shape (50, 10, 150)\n",
+      "Shape of the combined matrix for the first neuron of animal_1: (50, 10, 213)\n",
+      "Total number of animals in dictionary: 10\n",
+      "Number of neurons for animal_1: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import mat73\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.linear_model import RidgeCV\n",
+    "\n",
+    "# Load the data\n",
+    "filepath = \"SSTindivsomata_GLM.mat\"\n",
+    "data_dict = mat73.loadmat(filepath)\n",
+    "\n",
+    "num_animals = len(data_dict['animal']['ShiftLrate'])\n",
+    "\n",
+    "reorganized_data = {}\n",
+    "\n",
+    "print(f\"data_dict['animal']['ShiftR'][0].shape {data_dict['animal']['ShiftR'][0].shape}\")\n",
+    "\n",
+    "# Define indices for slicing the spatial bins\n",
+    "bin_slices = [\n",
+    "    slice(0, 10),  \n",
+    "    slice(10, 20),  \n",
+    "    slice(20, 30),  \n",
+    "    slice(30, 40),  \n",
+    "    slice(40, 50)   \n",
+    "]\n",
+    "\n",
+    "spatial_bin_matrix = np.zeros((50, 5))\n",
+    "        \n",
+    "spatial_bin_matrix[bin_slices[0], 0] = 1\n",
+    "spatial_bin_matrix[bin_slices[1], 1] = 1\n",
+    "spatial_bin_matrix[bin_slices[2], 2] = 1\n",
+    "spatial_bin_matrix[bin_slices[3], 3] = 1\n",
+    "spatial_bin_matrix[bin_slices[4], 4] = 1\n",
+    "\n",
+    "\n",
+    "for animal_idx in range(num_animals):\n",
+    "    neuron_list = []\n",
+    "    \n",
+    "    num_neurons = data_dict['animal']['ShiftR'][animal_idx].shape[2]\n",
+    "   \n",
+    "    for neuron_idx in range(1, num_neurons):\n",
+    "        neuron_data = []\n",
+    "        neuron_data.append(data_dict['animal']['ShiftLrate'][animal_idx])               # Lick rate\n",
+    "        neuron_data.append(data_dict['animal']['ShiftV'][animal_idx])                   # Reward location (valve opening)\n",
+    "        neuron_data.append(data_dict['animal']['ShiftRunning'][animal_idx])             # Running speed  \n",
+    "        neuron_data.append(data_dict['animal']['ShiftR'][animal_idx][:, :, neuron_idx]) # Neuron activity\n",
+    "        \n",
+    "        licking_on_reward = data_dict['animal']['ShiftLrate'][animal_idx] * data_dict['animal']['ShiftV'][animal_idx]\n",
+    "        \n",
+    "        combined_matrix = np.stack(neuron_data, axis=1)\n",
+    "        \n",
+    "        expanded_spatial_bin_matrix = np.repeat(spatial_bin_matrix[:, :, np.newaxis], combined_matrix.shape[2], axis=2)\n",
+    "        \n",
+    "        combined_matrix = np.concatenate((combined_matrix, expanded_spatial_bin_matrix), axis=1)\n",
+    "        \n",
+    "        licking_on_reward_expanded = licking_on_reward[:, np.newaxis, :]  \n",
+    "        print(f\"licking_on_reward_expanded shape {licking_on_reward_expanded.shape}\")\n",
+    "        \n",
+    "        combined_matrix = np.concatenate((combined_matrix, licking_on_reward_expanded), axis=1)\n",
+    "        print(f\"combined_matrix shape {combined_matrix.shape}\")\n",
+    "\n",
+    "        neuron_list.append(combined_matrix)\n",
+    "\n",
+    "    reorganized_data[f'animal_{animal_idx + 1}'] = neuron_list\n",
+    "\n",
+    "\n",
+    "print(f\"Shape of the combined matrix for the first neuron of animal_1: {reorganized_data['animal_1'][0].shape}\")\n",
+    "print(f\"Total number of animals in dictionary: {len(reorganized_data)}\")\n",
+    "print(f\"Number of neurons for animal_1: {len(reorganized_data['animal_1'])}\")\n",
+    "        \n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "_BaseRidgeCV.__init__() got an unexpected keyword argument 'store_cv_results'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 11\u001b[0m\n\u001b[0;32m      8\u001b[0m design_matrix_X \u001b[38;5;241m=\u001b[39m avg_neuron_data[:, :\u001b[38;5;241m3\u001b[39m]\n\u001b[0;32m      9\u001b[0m neuron_activity \u001b[38;5;241m=\u001b[39m avg_neuron_data[:, \u001b[38;5;241m3\u001b[39m]\n\u001b[1;32m---> 11\u001b[0m ridge_cv \u001b[38;5;241m=\u001b[39m RidgeCV(alphas\u001b[38;5;241m=\u001b[39m[\u001b[38;5;241m0.1\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m100\u001b[39m, \u001b[38;5;241m1000\u001b[39m, \u001b[38;5;241m5000\u001b[39m], store_cv_results\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m     12\u001b[0m ridge_cv\u001b[38;5;241m.\u001b[39mfit(design_matrix_X, neuron_activity)\n\u001b[0;32m     14\u001b[0m GLM_params[animal][i] \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mweights\u001b[39m\u001b[38;5;124m'\u001b[39m: ridge_cv\u001b[38;5;241m.\u001b[39mcoef_, \n\u001b[0;32m     15\u001b[0m                          \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mintercept\u001b[39m\u001b[38;5;124m'\u001b[39m: ridge_cv\u001b[38;5;241m.\u001b[39mintercept_, \n\u001b[0;32m     16\u001b[0m                          \u001b[38;5;124m'\u001b[39m\u001b[38;5;124malpha\u001b[39m\u001b[38;5;124m'\u001b[39m: ridge_cv\u001b[38;5;241m.\u001b[39malpha_, \n\u001b[0;32m     17\u001b[0m                          \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcv_results\u001b[39m\u001b[38;5;124m'\u001b[39m: np\u001b[38;5;241m.\u001b[39mmean(ridge_cv\u001b[38;5;241m.\u001b[39mcv_results_, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)}\n",
+      "\u001b[1;31mTypeError\u001b[0m: _BaseRidgeCV.__init__() got an unexpected keyword argument 'store_cv_results'"
+     ]
+    }
+   ],
    "source": [
     "GLM_params = {}\n",
     "\n",
@@ -102,7 +397,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -116,7 +411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
