reorganized functions into utils.py and plot.py

--- a/velocity_correction_LSTM.ipynb
+++ b/velocity_correction_LSTM.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/q9/g15z8pxs2fd8tgyd9ggfv1c8x5w4qx/T/ipykernel_81935/198242598.py:5: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/var/folders/q9/g15z8pxs2fd8tgyd9ggfv1c8x5w4qx/T/ipykernel_27817/198242598.py:5: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from tqdm.autonotebook import tqdm\n"
      ]
     }
@@ -65,7 +65,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1bc85d610>]"
+       "[<matplotlib.lines.Line2D at 0x18223ca10>]"
       ]
      },
      "execution_count": 3,
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -141,38 +141,14 @@
     }
    ],
    "source": [
-    "def create_sequences(data_x, data_y, seq_length):\n",
-    "    # Assuming data_x and data_y are flat numpy arrays\n",
-    "    X_seq, y_seq = [], []\n",
-    "    for i in range(len(data_x) - seq_length):\n",
-    "        X_seq.append(data_x[i : i + seq_length])  # Input sequence\n",
-    "        y_seq.append(data_y[i + seq_length])      # Target at next step\n",
-    "    return torch.tensor(np.array(X_seq), dtype=torch.float32), torch.tensor(np.array(y_seq), dtype=torch.float32)\n",
-    "\n",
-    "def create_trial_sequences(data_x, data_y, seq_length):\n",
-    "    # Assuming data_x and data_y are 2D numpy arrays (trials, time_steps)\n",
-    "    X_seq, y_seq = [], []\n",
-    "    for trial in range(data_x.shape[0]):\n",
-    "        for i in range(data_x.shape[1] - seq_length):\n",
-    "            X_seq.append(data_x[trial, i : i + seq_length])  # Input sequence\n",
-    "            y_seq.append(data_y[trial, i + seq_length])      # Target at next step\n",
-    "    return torch.tensor(np.array(X_seq), dtype=torch.float32), torch.tensor(np.array(y_seq), dtype=torch.float32)\n",
-    "\n",
     "seq_length = 5\n",
     "\n",
     "# velocity_flattened = velocity.flatten()\n",
     "# activity_flattened = activity.flatten()\n",
-    "# X, y = create_sequences(velocity_flattened, activity_flattened, seq_length)\n",
+    "# X, y = create_RNN_data_sequences(velocity_flattened, activity_flattened, seq_length, split='continuous')\n",
     "\n",
-    "X, y = create_trial_sequences(velocity, activity, seq_length)\n",
+    "X, y = ut.create_RNN_data_sequences(velocity, activity, seq_length, split='trial')\n",
     "print(X.shape, y.shape)  # (num_samples, seq_length), (num_samples,)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Split data into train and test"
    ]
   },
   {
@@ -232,61 +208,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "\n",
-    "# Define LSTM model\n",
-    "class VelocityLSTM(nn.Module):\n",
-    "    def __init__(self, input_size, hidden_size, num_layers, output_size):\n",
-    "        super().__init__()\n",
-    "        self.hidden_size = hidden_size\n",
-    "        self.num_layers = num_layers\n",
-    "        self.lstm = nn.LSTM(input_size, hidden_size, num_layers, batch_first=True)\n",
-    "        self.fc = nn.Linear(hidden_size, output_size)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        batch_size = x.size(0)\n",
-    "        h0 = torch.zeros(self.num_layers, batch_size, self.hidden_size).to(device)\n",
-    "        c0 = torch.zeros(self.num_layers, batch_size, self.hidden_size).to(device)\n",
-    "        out, (hn,cn) = self.lstm(x, (h0, c0)) # Out shape: (batch_size, seq_length, hidden_size). hn and cn are the final hidden and cell states.\n",
-    "        out = self.fc(out[:, -1, :]) # Use the last time step output for regression\n",
-    "        return out\n",
-    "\n",
-    "\n",
-    "class VelocityGRU(nn.Module):\n",
-    "    def __init__(self, input_size, hidden_size, num_layers, output_size):\n",
-    "        super().__init__()\n",
-    "        self.hidden_size = hidden_size\n",
-    "        self.num_layers = num_layers\n",
-    "        self.gru = nn.GRU(input_size, hidden_size, num_layers, batch_first=True)\n",
-    "        self.fc = nn.Linear(hidden_size, output_size)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        batch_size = x.size(0)\n",
-    "        h0 = torch.zeros(self.num_layers, batch_size, self.hidden_size).to(device)\n",
-    "        out, hn = self.gru(x, h0)  # GRU only returns hidden state\n",
-    "        out = self.fc(out[:, -1, :])  # Take the last time step output for regression\n",
-    "        return out\n",
-    "\n",
-    "\n",
-    "class VelocityRNN(nn.Module):\n",
-    "    def __init__(self, input_size, hidden_size, num_layers, output_size):\n",
-    "        super().__init__()\n",
-    "        self.hidden_size = hidden_size\n",
-    "        self.num_layers = num_layers\n",
-    "        self.rnn = nn.RNN(input_size, hidden_size, num_layers, batch_first=True, nonlinearity='relu', bias=True)\n",
-    "        self.fc = nn.Linear(hidden_size, output_size)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        batch_size = x.size(0)\n",
-    "        h0 = torch.zeros(self.num_layers, batch_size, self.hidden_size).to(device)\n",
-    "        out, hn = self.rnn(x, h0)  # RNN only returns hidden state\n",
-    "        out = self.fc(out[:, -1, :])  # Take the last time step output for regression\n",
-    "        return out\n",
-    "\n",
     "\n",
     "num_epochs = 200\n",
     "learning_rate = 0.005\n",
@@ -297,8 +223,7 @@
     "# model = VelocityGRU(input_size=1, hidden_size=hidden_size, num_layers=num_layers, output_size=1).to(device)\n",
     "model = VelocityRNN(input_size=1, hidden_size=hidden_size, num_layers=num_layers, output_size=1).to(device)\n",
     "criterion = nn.MSELoss()\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
-    "\n"
+    "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)"
    ]
   },
   {
